--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,14 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v2
 
+            - name: Cache Node.js modules (restore cache if available)
+              uses: actions/cache@v3
+              with:
+                  path: node_modules
+                  key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
+                  restore-keys: |
+                    ${{ runner.os }}-node-modules-
+
             - name: Run Tests
               run: npm run test
 
