--- a/package.json
+++ b/package.json
@@ -17,8 +17,15 @@
     "uuid": "^11.0.3"
   },
   "devDependencies": {
+    "@swc/core": "^1.10.0",
+    "@swc/jest": "^0.2.37",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-node": "^10.9.2"
   }
 }
