ci requires lint and test to be successful, to start building

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
 
     build-app:
         runs-on: ubuntu-22.04
-        needs: setup-environment
+        needs: [lint, run-test]
         steps:
             - name: Checkout code
               uses: actions/checkout@v2
