--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,14 @@ jobs:
 
             - name: Run Tests
               run: npm run test
+            - name: Test Report
+              uses: dorny/test-reporter@v1
+              if: success() || failure()
+              with:
+                name: Sachi ToDo JEST Tests            
+                path: reports/jest-*.xml    
+                reporter: jest-junit        
+      
 
     lint:
         runs-on: ubuntu-22.04
