--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest --ci --testResultsProcessor='jest-junit'"
+  },
+  "jest-junit": {
+    "outputDirectory": "./reports",
+    "outputName": "junit.xml"
   },
   "dependencies": {
+    "jest-junit": "^16.0.0",
     "next": "15.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
