--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-transform-css": "^6.0.1",
+    "jest-transform-stub": "^2.0.0",
     "ts-node": "^10.9.2"
   }
 }
