--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,13 +56,15 @@ jobs:
 
             - name: Run Tests
               run: npm run test
+            
             - name: Test Report
               uses: dorny/test-reporter@v1
               if: success() || failure()
               with:
                 name: Sachi ToDo JEST Tests            
                 path: reports/junit.xml    
-                reporter: jest-junit        
+                reporter: jest-junit
+                annotations: true      
       
 
     lint:
