--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --ci --testResultsProcessor='jest-junit'"
+    "test": "jest --ci --testResultsProcessor='jest-junit' --coverage"
   },
   "jest-junit": {
     "outputDirectory": "./reports",
