--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,8 @@ jobs:
 
             - name: Coverage Report
               uses: ArtiomTr/jest-coverage-report-action@v2
+              with:
+                annotations: failed-tests
       
 
     lint:
