--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,7 +106,10 @@ jobs:
 
             - name: Build Application
               run: npm run build
-    
+            
+            - name: List directory (debugging)
+              run: ls
+              
             - name: Upload Artifact
               uses: actions/upload-artifact@v4
               with:
