--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,4 +115,6 @@ jobs:
               with:
                 name: TodoApp
                 path: ./dist
+              continue-on-error: false
+
   
