Upload Artifact uses .next/ as path

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,6 +115,4 @@ jobs:
               continue-on-error: false
               with:
                 name: TodoApp
-                path: .next
-
-  
+                path: .next/
