--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,9 +112,8 @@ jobs:
               
             - name: Upload Artifact
               uses: actions/upload-artifact@v4
-              if: failure()
               with:
                 name: TodoApp
-                path: .next
+                path: .next/
                 if-no-files-found: error
                 retention-days: 15
