--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,6 +114,6 @@ jobs:
               uses: actions/upload-artifact@v4
               with:
                 name: TodoApp
-                path: .next/
+                path: .next/**
                 if-no-files-found: error
                 retention-days: 15
