Cypress tests are run

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,10 @@ jobs:
 
             - name: Run Tests
               run: npm run test
+              
+            - uses: cypress-io/github-action@v6
+              with:
+                  browser: edge
 
             - name: Test Report
               uses: dorny/test-reporter@v1
