build and start commeand are passed to cypress

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,9 @@ jobs:
 
             - name: Cypress run
               uses: cypress-io/github-action@v6
+              with:
+                build: npm run build
+                start: npm run dev
 
             - name: Test Report
               uses: dorny/test-reporter@v1
